<resources>
    <string name="app_name">S7 Экспедитор</string>
    
    <!-- General -->
    <string name="menu_call_title">+7 495 123-45-67</string>
    <string name="menu_exit_title">Выйти</string>
    <string name="tune">Настроить</string>

    <!-- Splash -->
    <string name="splash_update_db_label">Обновление базы данных для обеспечения\nработы приложения без доступа к интернету</string>

    <!-- Auth -->
    <string name="auth_choose_user_search_hint">Введите ФИО или ID экспедитора</string>
    <string name="auth_choose_title">Выберите экспедитора</string>
    <string name="auth_choose_error_title">Выберите экспедитора</string>
    <string name="auth_confirm_user_info_label">Вы авторизуетесь в системе как</string>
    <string name="auth_confirm_user_id">ID: %s</string>
    <string name="auth_confirm_user_action_title">Верно, авторизоваться</string>
    <string name="auth_confirm_change_user_action_title">Выбрать другого экспедитора</string>

    <!-- Choose procedure -->
    <string name="choose_procedure_user_info_label">Вы авторизованы в системе как:</string>
    <string name="choose_procedure_pass_title">Сдать на борт</string>
    <string name="choose_procedure_receive_title">Принять с борта</string>
    <string name="choose_procedure_message">Выберите процедуру</string>

    <!-- Choose steward -->
    <string name="choose_steward_search_hint">Введите ФИО или ID бортпроводника</string>
    <string name="procedure_choose_steward_title">Выберите бортпроводника</string>
    <string name="procedure_choose_steward_not_exist">Бортпроводник отсутствует</string>
    <string name="procedure_confirm_steward_info_label">Бортпроводником назначен</string>
    <string name="procedure_confirm_change_steward_action_title">Выбрать другого бортпроводника</string>
    <string name="procedure_confirm_steward_action_title">Верно</string>
    <string name="procedure_pass_without_steward_action_title">Сдать имущество без бортпроводника</string>
    <string name="procedure_receive_without_steward_action_title">Принять имущество без бортпроводника</string>

    <!-- Invoice scan -->
    <string name="invoice_scan_message">Поместите штрихкод накладной в центр рамки. Сканирование автоматическое.</string>
    <string name="invoice_scan_permission_message_dialog">Доступ к камере необдходим для сканирования!</string>
    <string name="invoice_scan_error_message">Не получается отсканировать накладную?</string>
    <string name="invoice_scan_error_action_title">Ввести номер накладной вручную</string>
    <string name="invoice_number_message">Введите номер накладной, который указан в её правом верхнем углу.</string>
    <string name="invoice_number_input_back_to_scan_message_title">Либо повторно отсканируйте накладную</string>
    <string name="invoice_number_input_back_to_scan_action_title">Отсканировать накладную</string>
    <string name="invoice_number_input_scan_hint">Номер накладной</string>
    <string name="invoice_number_input_action_message">Найти накладную</string>
    <!--<string name="invoice_number_input_pass_action_message">Сдать ЭИ по накладной №%s</string>-->
    <!--<string name="invoice_number_input_receive_action_message">Принять ЭИ по накладной №%s</string>-->

    <!-- Inventory scan -->
    <string name="inventory_scan_title">Накладная №%s</string>
    <string name="inventory_scan_start_action_title">Сканировать экипировочное имущество</string>
    <string name="inventory_scan_stop_action_title">Закончить сканирование</string>
    <string name="inventory_scan_resume_action_title">Продолжить сканирование</string>
    <string name="inventory_scan_end_action_type_pass_title">Закончить сдачу экипировочного имущества</string>
    <string name="inventory_scan_end_action_type_receive_title">Завершить приём экипировочного имущества</string>
    <string name="inventory_scan_title_label">Наименование</string>
    <string name="inventory_scan_plan_label">План</string>
    <string name="inventory_scan_fact_label">Факт</string>
    <string name="inventory_scan_info_label">Информация</string>
    <string name="inventory_scan_count_label">Всего найдено: %d</string>
    <string name="scan_result_success_procedure_type_pass_text">ЭИ %s сдано</string>
    <string name="scan_result_excluded_from_invoice_procedure_type_pass_text">ЭИ %s сдано, но не числится в накладной №%s</string>
    <string name="scan_result_excluded_from_database_procedure_type_pass_text">ЭИ %s сдано, но отсутствует в справочнике экипировочного имущества</string>

    <string name="scan_result_success_procedure_type_receive_text">ЭИ %s принято</string>
    <string name="scan_result_excluded_from_invoice_procedure_type_receive_text">ЭИ %s принято, но не числится в накладной №%s</string>
    <string name="scan_result_excluded_from_database_procedure_type_receive_text">ЭИ %s принято, но отсутствует в справочнике экипировочного имущества</string>

    <string name="scan_result_loading_info_text">ЭИ %s загрузка информации…</string>

    <!-- Procedure cancel -->
    <string name="procedure_pass_cancel_action_resume_title">Продолжить сдачу имущества</string>
    <string name="procedure_receive_cancel_action_resume_title">Продолжить приём имущества</string>
    <string name="procedure_pass_cancel_action_confirm_title">Я понимаю, отменить сдачу</string>
    <string name="procedure_receive_cancel_action_confirm_title">Я понимаю, отменить приёмку</string>
    <string name="procedure_pass_cancel_title">Вы хотите отменить сдачу экипировочного имущества?</string>
    <string name="procedure_receive_cancel_title">Вы хотите отменить приём экипировочного имущества?</string>
    <string name="procedure_cancel_message">Внимание! Данные не будут сохранены и процедуру придётся начать с начала</string>

    <!-- Procedure success -->
    <string name="procedure_success_pass_type_text">Экипировочное имущество по\nнакладной №%s сдано</string>
    <string name="procedure_success_receive_type_text">Экипировочное имущество по\nнакладной №%s принято</string>
    <string name="procedure_success_main_menu_action_title">Перейти в главное меню</string>

    <!-- Status -->
    <string name="status_resume_work_action_title">Продолжить работу</string>
    <string name="status_update_db_action_title">Обновить базу данных</string>
    <string name="status_last_update_time">Последнее обновление: %s</string>
    <string name="status_last_update_time_error_title">База не обновлялась</string>
    <string name="status_updated">База данных актуальна</string>
    <string name="status_not_updated">База данных не актуальна</string>
    <string name="status_updating">Обновление базы данных</string>

    <!-- Error -->
    <string name="error_network_connected">Ошибка сети, пожалуйста повторите попытку позже</string>

</resources>
