<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="user"
                type="ru.iqsklad.data.dto.user.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/procedure_confirm_steward_info_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/user_info_view"/>

        <include
                android:id="@+id/user_info_view"
                layout="@layout/block_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/start_end_margin"
                app:layout_constraintBottom_toTopOf="@id/confirm_user_change_view"
                app:user="@{user}"/>

        <TextView
                android:id="@+id/confirm_user_change_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:text="@string/procedure_confirm_change_steward_action_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/confirm_user_accept_view"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_user_accept_view"
                style="@style/PrimaryButton"
                android:layout_margin="@dimen/start_end_margin"
                android:text="@string/procedure_confirm_steward_action_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>