<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="user"
                type="ru.iqsklad.data.dto.user.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ru.iqsklad.ui.base.view.ActionBarView
                android:id="@+id/confirm_user_action_bar_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:field_action_bar_type="type_logo_with_back"/>

        <TextView
                style="@style/TextView.Regular.Black.16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_confirm_user_info_label"
                android:letterSpacing="@dimen/default_letter_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/user_info_view"/>

        <include
                android:id="@+id/user_info_view"
                layout="@layout/block_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/start_end_margin"
                app:layout_constraintBottom_toTopOf="@id/confirm_user_change_view"
                app:user="@{user}"/>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_user_change_view"
                style="@style/EmptyButton"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:text="@string/auth_confirm_change_user_action_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/confirm_user_accept_view"
                app:strokeWidth="@dimen/button_stroke_width"
                app:strokeColor="@color/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_user_accept_view"
                style="@style/FilledButton"
                android:layout_margin="@dimen/start_end_margin"
                android:text="@string/auth_confirm_user_action_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>