<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

        <TextureView
                android:id="@+id/invoice_scan_texture_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <ru.iqsklad.ui.base.view.ActionBarView
                android:id="@+id/invoice_scan_action_bar_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:field_action_bar_type="type_logo_with_back_transparent"
                app:field_action_bar_theme="dark"/>

        <TextView
                style="@style/TextView.Regular.White.16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/invoice_scan_message"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:letterSpacing="@dimen/default_letter_spacing"
                app:layout_constraintTop_toBottomOf="@id/invoice_scan_action_bar_view"
                app:layout_constraintBottom_toTopOf="@id/guideline_top"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75"/>

        <TextView
                android:id="@+id/invoice_scan_error_message_title"
                style="@style/TextView.Regular.White.14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/invoice_scan_error_message"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/start_end_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/invoice_scan_error_action_title"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/invoice_scan_error_action_title"
                style="@style/EmptyTransparentButton"
                android:text="@string/invoice_scan_error_action_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_margin="@dimen/start_end_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:strokeColor="@color/white"
                app:strokeWidth="@dimen/button_stroke_width"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>