<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="user"
                type="ru.iqsklad.data.dto.user.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ru.iqsklad.ui.base.view.ActionBarView
                android:id="@+id/choose_procedure_action_bar_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:field_action_bar_type="type_logo_without_back"/>

        <ImageView
                android:id="@+id/user_photo_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/photo_sample"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/choose_procedure_action_bar_view"
                tools:ignore="ContentDescription" />

        <TextView
                android:id="@+id/info_label_view"
                style="@style/TextView.Regular.Black.16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/choose_procedure_user_info_label"
                android:letterSpacing="@dimen/default_letter_spacing"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_photo_view"/>

        <include
                android:id="@+id/user_info_view"
                layout="@layout/block_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/start_end_margin"
                app:layout_constraintTop_toBottomOf="@id/info_label_view"
                app:user="@{user}"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/procedure_pass_view"
                style="@style/EmptyButton"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:layout_marginStart="@dimen/start_end_margin"
                android:text="@string/choose_procedure_pass_title"
                app:layout_constraintBottom_toTopOf="@id/procedure_receive_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="@dimen/button_stroke_width"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/procedure_receive_view"
                style="@style/EmptyButton"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:layout_marginStart="@dimen/start_end_margin"
                android:text="@string/choose_procedure_receive_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeColor="@color/colorPrimary"
                app:strokeWidth="@dimen/button_stroke_width"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>