<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.iqsklad.data.dto.procedure.InventoryScanMode"/>

        <import type="ru.iqsklad.data.dto.procedure.ProcedureType"/>

        <import type="android.view.View"/>

        <variable
                name="presenter"
                type="ru.iqsklad.presentation.presenter.procedure.InventoryScanPresenter"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/inventory_scan_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@{String.format(@string/inventory_scan_title, presenter.getInvoiceNumber())}"
                android:layout_marginTop="@dimen/start_end_margin"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/inventory_scan_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_end_margin"
                android:layout_marginStart="@dimen/start_end_margin"
                android:text="@string/inventory_scan_title_label"
                app:layout_constraintTop_toBottomOf="@id/inventory_scan_title"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/invoice_preview_plan_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:text="@string/inventory_scan_plan_label"
                app:layout_constraintTop_toBottomOf="@id/inventory_scan_title"
                app:layout_constraintEnd_toStartOf="@id/inventory_scan_fact_label"/>

        <TextView
                android:id="@+id/inventory_scan_fact_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:text="@string/inventory_scan_fact_label"
                android:visibility="@{presenter.getInventoryScanMode() == InventoryScanMode.PREVIEW ? View.GONE : View.VISIBLE}"
                app:layout_constraintTop_toBottomOf="@id/inventory_scan_title"
                app:layout_constraintEnd_toEndOf="parent"/>

        <View
                android:id="@+id/label_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="@dimen/top_bottom_margin"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                app:layout_constraintTop_toBottomOf="@id/inventory_scan_title_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inventory_list_view"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginBottom="@dimen/top_bottom_margin"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@id/label_divider"
                app:layout_constraintEnd_toEndOf="@id/label_divider"
                app:layout_constraintTop_toBottomOf="@id/label_divider"
                tools:listitem="@layout/item_inventory"/>

        <TextView
                android:id="@+id/inventory_scan_info_label_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_end_margin"
                android:visibility="@{presenter.getInventoryScanMode() == InventoryScanMode.PREVIEW ? View.GONE : View.VISIBLE}"
                android:text="@string/inventory_scan_info_label"
                app:layout_constraintStart_toStartOf="@id/label_divider"
                app:layout_constraintTop_toBottomOf="@id/inventory_list_view"/>

        <TextView
                android:id="@+id/inventory_scan_count_label_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_end_margin"
                android:visibility="@{presenter.getInventoryScanMode() == InventoryScanMode.PREVIEW ? View.GONE : View.VISIBLE}"
                android:text="@{String.format(@string/inventory_scan_count_label, presenter.getOverAllScanCount())}"
                app:layout_constraintEnd_toEndOf="@id/label_divider"
                app:layout_constraintTop_toBottomOf="@id/inventory_list_view"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scan_result_list_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/start_end_margin"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@id/label_divider"
                app:layout_constraintEnd_toEndOf="@id/label_divider"
                app:layout_constraintTop_toBottomOf="@id/inventory_scan_info_label_view"
                app:layout_constraintBottom_toTopOf="@id/inventory_scan_end_action_view"
                tools:listitem="@layout/item_scan_result"/>

        <TextView
                android:id="@+id/inventory_scan_end_action_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:text="@{presenter.getProcedureType() == ProcedureType.PASS ? @string/inventory_scan_end_action_type_pass_title : @string/inventory_scan_end_action_type_receive_title}"
                android:visibility="@{presenter.getInventoryScanMode() == InventoryScanMode.STOPPED ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toTopOf="@id/inventory_scan_action_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/inventory_scan_action_view"
                style="@style/PrimaryButton"
                android:layout_marginBottom="@dimen/start_end_margin"
                android:layout_marginStart="@dimen/start_end_margin"
                android:layout_marginEnd="@dimen/start_end_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:scanActionText="@{presenter.getInventoryScanMode()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>